--- a/getting-start-with-prestashop/configuration/index.html
+++ b/getting-start-with-prestashop/configuration/index.html
@@ -86,6 +86,11 @@
     </li>
         </ul>
     </li>
+    <li data-nav-id="/rajbir/how-to-setup-online-payment-module-on-your-prestashop-online-store/" class="dd-item parent">
+      <a href="/rajbir/how-to-setup-online-payment-module-on-your-prestashop-online-store/">
+        <span>How to setup online payment module on your prestashop online store?</span><i class="fa fa-circle-thin read-icon"></i>
+      </a>
+    </li>
         <section id="shortcuts">
                 <li class="" role=""><h3>More</h3><a href="https://github.com/vjeantet/hugo-theme-docdock" target="_blank" rel="noopener"><i class='fa fa-github'></i> Github repo</a></li>
                 <li class="" role=""><a href="/rajbir/showcase" target="_blank" rel="noopener"><i class='fa fa-camera'></i> Showcases</a></li>
@@ -221,7 +226,7 @@
 
     <div id="navigation">
         <a class="nav nav-prev" href="/rajbir/getting-start-with-prestashop/database/" title="Database Initialization"> <i class="fa fa-chevron-left"></i></a>
-        <a class="nav nav-next" href="/rajbir/getting-start-with-prestashop/installation/" title="Installation" style="margin-right: 0px;"><i class="fa fa-chevron-right"></i></a>
+        <a class="nav nav-next" href="/rajbir/how-to-setup-online-payment-module-on-your-prestashop-online-store/" title="How to setup online payment module on your prestashop online store?" style="margin-right: 0px;"><i class="fa fa-chevron-right"></i></a>
     </div>
 
     </section>
