--- a/difference-between-wordpress-prestashop-and-magento/index.html
+++ b/difference-between-wordpress-prestashop-and-magento/index.html
@@ -86,6 +86,11 @@
     </li>
         </ul>
     </li>
+    <li data-nav-id="/rajbir/how-to-setup-online-payment-module-on-your-prestashop-online-store/" class="dd-item parent">
+      <a href="/rajbir/how-to-setup-online-payment-module-on-your-prestashop-online-store/">
+        <span>How to setup online payment module on your prestashop online store?</span><i class="fa fa-circle-thin read-icon"></i>
+      </a>
+    </li>
         <section id="shortcuts">
                 <li class="" role=""><h3>More</h3><a href="https://github.com/vjeantet/hugo-theme-docdock" target="_blank" rel="noopener"><i class='fa fa-github'></i> Github repo</a></li>
                 <li class="" role=""><a href="/rajbir/showcase" target="_blank" rel="noopener"><i class='fa fa-camera'></i> Showcases</a></li>
@@ -363,7 +368,7 @@ If you want high level, more secure platform for your online store then it is go
 <a href="https://www.quora.com/Magento-What-are-the-major-advantages-disadvantages-of-using-the-magento-platform">https://www.quora.com/Magento-What-are-the-major-advantages-disadvantages-of-using-the-magento-platform</a>
 <a href="http://www.krishtechnolabs.com/insight/what-are-the-advantages-and-disadvantages-of-magento/">http://www.krishtechnolabs.com/insight/what-are-the-advantages-and-disadvantages-of-magento/</a></p>
 </div>
-	<div class="panel-footer">Next Go to <a href="../getting-start-with-Prestashop">Getting Started with Prestashop</a></div>
+	<div class="panel-footer">Next Go to <a href="../getting-start-with-prestashop">Getting Started with Prestashop</a></div>
 </div>
 
 
