--- a/getting-start-with-prestashop/index.html
+++ b/getting-start-with-prestashop/index.html
@@ -86,6 +86,11 @@
     </li>
         </ul>
     </li>
+    <li data-nav-id="/rajbir/how-to-setup-online-payment-module-on-your-prestashop-online-store/" class="dd-item parent">
+      <a href="/rajbir/how-to-setup-online-payment-module-on-your-prestashop-online-store/">
+        <span>How to setup online payment module on your prestashop online store?</span><i class="fa fa-circle-thin read-icon"></i>
+      </a>
+    </li>
         <section id="shortcuts">
                 <li class="" role=""><h3>More</h3><a href="https://github.com/vjeantet/hugo-theme-docdock" target="_blank" rel="noopener"><i class='fa fa-github'></i> Github repo</a></li>
                 <li class="" role=""><a href="/rajbir/showcase" target="_blank" rel="noopener"><i class='fa fa-camera'></i> Showcases</a></li>
@@ -192,11 +197,11 @@ Download <a href="https://www.prestashop.com/en/download">Prestashop</a>, instal
 
 <ul class="children children-h2"><h2>
 	<a href="/rajbir/getting-start-with-prestashop/installation/" >Installation</a></h2>
-<p></p><h2>
+<p>PHP 5.4 or later: minimum required to use Prestashop 1.7.Installing Prestashop Prestashop is very easy to install.
+Before start real work:
+ Download the Prestashop Download Install it on Your Server Customize your E-Commerce Site  Download the Prestashop From the prestashop official website, First download the Package. You can download it from the website for Windows System or For Linux System with the commands in your cmd.</p><h2>
 	<a href="/rajbir/getting-start-with-prestashop/database/" >Database Initialization</a></h2>
-<p>For prestashop installation we need one new database. You can create database on your web server. In case there is no MySql user who has all privileges for accessing and modifying this database, create it as well.
- Step 1: Make connection with the database  Step 2: With the following command, create the database
-  create database prestashop;  Next Step: Configuration Follow instructions here</p><h2>
+<p></p><h2>
 	<a href="/rajbir/getting-start-with-prestashop/configuration/" >Configuration</a></h2>
 <p>Configure the website and the admin via browser
 Go to the website URL(eg: http://example.com) in the browser to start the setup process.
