--- a/index.html
+++ b/index.html
@@ -86,6 +86,11 @@
     </li>
         </ul>
     </li>
+    <li data-nav-id="/rajbir/how-to-setup-online-payment-module-on-your-prestashop-online-store/" class="dd-item parent">
+      <a href="/rajbir/how-to-setup-online-payment-module-on-your-prestashop-online-store/">
+        <span>How to setup online payment module on your prestashop online store?</span><i class="fa fa-circle-thin read-icon"></i>
+      </a>
+    </li>
         <section id="shortcuts">
                 <li class="" role=""><h3>More</h3><a href="https://github.com/vjeantet/hugo-theme-docdock" target="_blank" rel="noopener"><i class='fa fa-github'></i> Github repo</a></li>
                 <li class="" role=""><a href="/rajbir/showcase" target="_blank" rel="noopener"><i class='fa fa-camera'></i> Showcases</a></li>
@@ -147,6 +152,7 @@ role="alert">Every one has to do their own research in order to pass this course
 <ul>
 <li>Blog 1: <a href="getting-start-with-prestashop">Getting Started with Prestashop</a></li>
 <li>Blog 2: <a href="difference-between-wordpress-prestashop-and-magento/">Difference between Wordpress, Prestashop and Magento</a></li>
+<li>Blog 3: <a href="how-to-setup-online-payment-module-on-your-prestashop-online-store/">How to setup online payment module on your prestashop online store?</a></li>
 </ul>
 
 
